# recipe-database-scraper

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  __init__.py  _utils.py  page_scraper.py  pyproject.toml  recipe_scraper.py
recipe_database_scraper/: __init__.py  _exceptions.py  _utils.py  get_html.py  page_scraper.py  recipe_scraper.py  sitemap_scraper.py
tests/: test_domain_extractor.py  test_file_handler.py  test_is_valid_url.py  test_recipe_scraper.py  test_robot_parser.py  test_sitemap_scraper.py  test_strip_url_to_homepage.py
